isBlank() is not defined
Changed to trim().isEmpty() which is equivalent